1.2.8: 
        * added feature https://github.com/pablodav/burp_server_reports/issues/6 to download inventory.csv from email. 
        * added more examples in README.rst
        * updated versions in README.rst
1.2.7:
        * fix https://github.com/pablodav/burp_server_reports/issues/14 added feature to change name length column on print text to stdout
1.2.6:
        * fix https://github.com/pablodav/burp_server_reports/issues/13 from @roms2000 fix sender address
1.2.5:
        * added pyzmail36 to be compatible with all python3 included python3.6 fix #12
        * added tox.ini tests with multiple python versions for easier testing
1.2.4: 
        * fix #10 not working with burpui standalone due to wrong test for multi-agent
1.2.3:
        * change to new burpui demo url
        * fix tests removing unnecesary pandas dependencies as it is not used
        * fix multiplatform usage, changing temp files from os.getuid() to getpass.getuser()
1.2.2:
        * remove unncesesary pandas dependency for now
1.2.1:
        * fix non passing --detail correctly from cmd
1.2.0: 
        * Refactor debug usage with logging
        * improve more tests
        * increase performance and better error proven when no data comes from burpui
        * first experiments with pandas library (not yet in use from cli, only preparing future usage)
1.1.1: 
        * Small changes to get more tests done
        * Enhanced behaviour when burpui returns [] in the api
1.1.0:
        * More unittests
        * Parallel ping (deco concurrent)
        * Small fixes
1.0.3:
        * fix #2 missing status for inactive client not in burp
1.0.2:
        * Added retry 3 times to urlget lib
1.0.1:
        * fix bug when no complete backup is reported to a client but it has date that seems to be the last backup running